resources/webidl2/test/invalid/baseline/sequenceAsAttribute.txt
Syntax error at line 2, since `interface sequenceAsAttribute`:
  attribute sequence<short> invalid;
                            ^ Attributes cannot accept sequence types
